--- a/white-screen.html
+++ b/white-screen.html
@@ -10,5 +10,6 @@
   <div id="whitescreenparent">
   </div>
 </body>
-
+<link rel="stylesheet" type="text/css" href="white-screen.css">  
+<script src="white-screen.js"></script>
 </html>
